--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -20,8 +20,7 @@ html {
   text-transform: uppercase;
 }
 
-body {
-  margin: var(--edge-margin);
+body, .root {
   max-width: 100vw;
   max-height: 100vh;
   overflow: hidden;
@@ -31,8 +30,15 @@ body {
   justify-content: center;
 }
 
+.root {
+  margin: var(--edge-margin);
+}
+
+.filtered {
+  filter: url(#threshold) blur(clamp(0.1px, 0.045em, 1.0px)) contrast(140%);
+}
+
 main {
-  filter: url(#threshold) blur(clamp(0.1px, 0.045em, 1.1px)) contrast(140%);
   max-width: 1000px;
 }
 
@@ -46,7 +52,7 @@ main {
   background-color: black;
   color: white;
   */
-  background-color: rgb(255, 253, 132);
+  background-color: rgb(255, 252, 51);
 
   font-style: italic;
 
