feat: implement crude sequence linking

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -52,7 +52,8 @@ main {
   background-color: black;
   color: white;
   */
-  background-color: rgb(255, 252, 51);
+  background-color: rgb(207, 255, 16);
+  box-shadow: 0.1em 0.1em 0.2em black;
 
   font-style: italic;
 
