--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,7 +1,7 @@
 :root {
   --font-serif: 'Times New Roman', Times, serif;
   --font-sans: Helvetica, Arial, sans-serif;
-  --font-accent: 'Brush Script MT', cursive;
+  --font-accent: 'Brush Script MT', cursive, var(--font-serif);
 
   --font-family: Helvetica, Arial, sans-serif;
 
@@ -202,7 +202,7 @@ main {
 }
 
 .section .active {
-  text-shadow: 0px 0px 5px black;
+  text-shadow: 0px 0px 0.15em black;
 }
 
 .section li:nth-child(odd) {
@@ -214,7 +214,7 @@ main {
 .emphasized {
   font-family: var(--font-accent);
   font-style: italic;
-  font-size: 1.3em;
+  font-size: 1.1em;
 }
 
 aside {
