style: mobile improvements, delta cap, etc

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -53,6 +53,11 @@ body, .root {
   filter: none;
 }
 
+.word.filtered, .composite.filtered {
+  /* blur(0.5px) does not work on safari... it defaults to 1px */
+  filter: url(#threshold) blur(0.5px) contrast(140%);
+}
+
 main {
   max-width: 1000px;
   height: calc(100vh - var(--aside-height));
@@ -238,7 +243,7 @@ aside {
   position: relative;
   width: 100%;
 
-  padding: 0.5em;
+  padding-top: 0.25em;
 
   display: flex;
   justify-content: center;
@@ -248,7 +253,7 @@ aside {
   --fg: var(--white);
   */
 
-  border-top: 3px solid black;
+  border-top: 0.08em solid black;
 
   color: var(--fg);
   background-color: var(--bg);
@@ -329,23 +334,29 @@ aside button {
 
 .progress .bar {
   display: inline-block;
-  height: 50%;
-
   position: absolute;
 
+  height: 50%;
   top: 50%;
   transform: translate(0, -50%);
 
   width: calc(100% * var(--value));
-  border: 1px solid var(--fg);
+  border: 0.05em solid var(--fg);
 
-  transition: 0.15s;
+  transition: 0.15s, background-color 0.5s, box-shadow 0.5s;
 
   box-shadow: 
     0px 0px 0.1em var(--bg),
     inset 0px 0px 0.1em var(--fg);
 
   border-radius: 1em;
+}
+
+.progress.start .bar, .progress.end .bar {
+  background-color: var(--fg);
+  box-shadow: 
+    0px 0px 0.1em var(--bg),
+    inset 0px 0px 0.15em var(--bg);
 }
 
 .controller .index {
@@ -355,6 +366,10 @@ aside button {
 @media screen and (min-width: 600px) {
   .filtered {
     filter: url(#threshold) blur(clamp(0.0px, 0.045em, 1.0px)) contrast(140%);
+  }
+
+  .word.filtered {
+    filter: none;
   }
 
   .sequence {
