--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -49,15 +49,6 @@ body, .root {
   opacity: 1;
 }
 
-.filtered {
-  filter: none;
-}
-
-.word.filtered, .composite.filtered {
-  /* blur(0.5px) does not work on safari... it defaults to 1px */
-  filter: url(#threshold) blur(0.5px) contrast(140%);
-}
-
 main {
   max-width: 1000px;
   height: calc(100vh - var(--aside-height));
@@ -67,12 +58,18 @@ main {
   box-sizing: border-box;
 }
 
+.filtered {
+  filter: none;
+}
+
+.word.filtered, .composite.filtered {
+  /* blur(0.5px) does not work on safari... it defaults to 1px */
+  filter: url(#threshold) blur(0.5px) contrast(140%);
+}
+
+
 .center-piece {
   position: fixed;
-  /*
-  background-color: var(--fg);
-  color: var(--bg);
-  */
   background-color: var(--primary);
   box-shadow: 
     0.3em 0.2em 0.3em -0.1em rgba(0, 0, 0, 0.588),
@@ -82,10 +79,6 @@ main {
 
   top: 50%;
   left: 50%;
-
-  /*
-  font-size: max(1em, 16px);
-  */
 
   width: min(15em, 100vw);
   height: min(13em, 100vh);
@@ -122,15 +115,6 @@ main {
 
   line-height: 1.07em;
 }
-
-/*
-.composite .line::before {
-  content: counter(line) ". ";
-
-  font-family: var(--font-serif);
-  font-style: italic;
-}
-  */
 
 .composite .line:nth-child(even) {
   text-align: right;
@@ -205,7 +189,9 @@ main {
   --line-height: 1.2em;
 
   line-height: var(--line-height);
+  /*
   padding-bottom: var(--line-height);
+  */
 }
 
 .section li {
@@ -234,12 +220,6 @@ main {
 }
 
 aside {
-  /*
-  position: fixed;
-  bottom: 0;
-  left: 50%;
-  transform: translate(-50%);
-  */
   position: relative;
   width: 100%;
 
@@ -247,11 +227,6 @@ aside {
 
   display: flex;
   justify-content: center;
-
-  /*
-  --bg: var(--black);
-  --fg: var(--white);
-  */
 
   border-top: 0.08em solid black;
 
@@ -353,10 +328,7 @@ aside button {
 }
 
 .progress.start .bar, .progress.end .bar {
-  background-color: var(--fg);
-  box-shadow: 
-    0px 0px 0.1em var(--bg),
-    inset 0px 0px 0.15em var(--bg);
+  animation: background-pulse 0.5s;
 }
 
 .controller .index {
@@ -375,13 +347,6 @@ aside button {
   .sequence {
     padding: 0;
   }
-
-  /*
-  aside {
-    left: 0;
-    transform: none;
-  }
-  */
 }
 
 @media screen and (min-width: 1800px) {
@@ -399,5 +364,28 @@ aside button {
 
   main {
     height: 100%;
+  }
+}
+
+@keyframes background-pulse {
+  0% {
+    background-color: transparent;
+    box-shadow: 
+      0px 0px 0em transparent,
+      inset 0px 0px 0em transparent;
+  }
+
+  50% {
+    background-color: var(--fg);
+    box-shadow: 
+      0px 0px 0.1em var(--bg),
+      inset 0px 0px 0.15em var(--bg);
+  } 
+
+  100% {
+    background-color: transparent;
+    box-shadow: 
+      0px 0px 0em transparent,
+      inset 0px 0px 0em transparent;
   }
 }
