--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -237,7 +237,11 @@ aside {
   display: flex;
   justify-content: center;
 
-  border-top: 0.08em solid black;
+  height: 100%;
+
+  box-shadow: 
+    0px -0.01em 0.1em 0.0em var(--fg),
+    inset 0px 0.2em 0.05em -0.2em var(--fg);
 
   color: var(--fg);
   background-color: var(--bg);
@@ -372,6 +376,9 @@ aside button {
 
     width: auto;
     padding: 0.25em 0.5em;
+
+    box-shadow: unset;
+    height: unset;
   }
 
   main {
