--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -73,9 +73,8 @@ main {
 
 .word.filtered, .composite.filtered {
   /* blur(0.5px) does not work on safari... it defaults to 1px */
-  filter: url(#threshold) blur(0.5px) contrast(140%);
+  filter: url(#threshold) blur(0.5px);
 }
-
 
 .center-piece {
   position: fixed;
@@ -236,11 +235,12 @@ aside {
 
   display: flex;
   justify-content: center;
+  align-items: center;
 
   height: 100%;
 
   box-shadow: 
-    0px -0.01em 0.1em 0.0em var(--fg),
+    0px -0.04em 0.06em 0.0em var(--fg),
     inset 0px 0.2em 0.05em -0.2em var(--fg);
 
   color: var(--fg);
@@ -353,7 +353,7 @@ aside button {
 
 @media screen and (min-width: 600px) {
   .sequence.filtered, .composite.filtered {
-    filter: url(#threshold) blur(clamp(0.0px, 0.045em, 1.0px)) contrast(140%);
+    filter: url(#threshold) blur(clamp(0.0px, 0.02rem, 1.0px));
   }
 
   .word.filtered {
