--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -36,9 +36,15 @@ html {
   text-transform: uppercase;
 }
 
+.app {
+  height: 100%;
+}
+
 body, .root {
   max-width: 100vw;
   height: 100vh;
+  height: 100dvh;
+
   overflow: hidden;
 
   display: flex;
@@ -60,7 +66,7 @@ body, .root {
 
 main {
   max-width: 1000px;
-  height: calc(100vh - var(--aside-height));
+  height: calc(100% - var(--aside-height));
 }
 
 *, *::before, *::after {
@@ -71,9 +77,12 @@ main {
   filter: none;
 }
 
-.word.filtered, .composite.filtered {
-  /* blur(0.5px) does not work on safari... it defaults to 1px */
-  filter: url(#threshold) blur(0.5px);
+.section .line.active {
+  filter: url(#threshold);
+}
+
+.word.active {
+  filter: blur(0.5px);
 }
 
 .center-piece {
@@ -89,7 +98,7 @@ main {
   left: 50%;
 
   width: min(15em, 100vw);
-  height: min(13em, 100vh);
+  height: min(13em, 100%);
 
   transform: translate(-50%, -50%);
 
@@ -109,6 +118,8 @@ main {
 
   font-family: var(--font-sans);
   counter-reset: line;
+
+  filter: url(#threshold);
 }
 
 .composite > * {
@@ -122,6 +133,8 @@ main {
   counter-increment: line;
 
   line-height: 1.07em;
+
+  filter: blur(0.5px);
 }
 
 .composite .line:nth-child(even) {
@@ -141,6 +154,8 @@ main {
 
   width: 100%;
   text-align: right;
+
+  filter: blur(0.5px);
 }
 
 .composite.align-center .line {
@@ -182,7 +197,7 @@ main {
   overflow: auto;
 
   height: 100%;
-  max-height: calc(100vh - var(--edge-margin) * 2);
+  max-height: calc(100% - var(--edge-margin) * 2);
 
   padding: 0.5ch;
 }
@@ -263,7 +278,14 @@ aside button {
 
 .controller {
   text-shadow: 0px 0px 0.05em var(--fg);
+  /*
   filter: url(#threshold) blur(0.02em);
+  */
+  filter: url(#threshold);
+}
+
+.controller .span {
+  filter: blur(0.5px);
 }
 
 .progress-wrapper {
@@ -334,7 +356,7 @@ aside button {
   width: calc((100% - 2 * var(--margin)) * var(--value));
   border: 0.05em solid var(--fg);
 
-  transition: 0.15s, background-color 0.5s, box-shadow 0.5s;
+  transition: 0s;
 
   box-shadow: 
     0px 0px 0.1em var(--bg),
@@ -345,23 +367,28 @@ aside button {
 
 .progress.start .bar, .progress.end .bar {
   animation: background-pulse 0.5s;
+  /* Only setting the transition on the start/end animations fixes issues in safari */
+  transition: 0.15s, background-color 0.5s, box-shadow 0.5s;
 }
 
 .controller .index {
   width: 100%;
 }
 
-@media screen and (min-width: 600px) {
-  .sequence.filtered, .composite.filtered {
-    filter: url(#threshold) blur(clamp(0.0px, 0.02rem, 1.0px));
-  }
-
-  .word.filtered {
-    filter: none;
-  }
-
+@media screen and (min-width: 800px) {
   .sequence {
     padding: 0;
+  }
+
+  .sequence, .center-piece {
+    filter: blur(0.02em);
+  }
+
+  .word {
+    /*
+    filter: blur(0.02em);
+    */
+    filter: none;
   }
 }
 
