--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -17,7 +17,7 @@
   --shadow-yellow:rgba(79, 107, 2, 0.354);
   --shadow-black: rgba(0, 0, 0, 0.588);
   */
-  --yellow: rgb(224, 221, 189);
+  --yellow: rgb(230, 223, 178);
 
   --shadow-yellow:rgba(112, 114, 104, 0.198);
   --shadow-black: rgba(0, 0, 0, 0.407);
@@ -339,7 +339,7 @@ aside button {
   background-color: var(--fg);
   box-shadow: 
     0px 0px 0.15em var(--fg),
-    inset 0px 0px 0.2em var(--bg);
+    inset 0px 0px 0.2em 0.04em var(--bg);
 }
 
 .progress .bar {
@@ -385,9 +385,6 @@ aside button {
   }
 
   .word {
-    /*
-    filter: blur(0.02em);
-    */
     filter: none;
   }
 }
