--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -17,7 +17,7 @@
   --shadow-yellow:rgba(79, 107, 2, 0.354);
   --shadow-black: rgba(0, 0, 0, 0.588);
   */
-  --yellow: rgb(230, 223, 178);
+  --yellow: #e6dfb2;
 
   --shadow-yellow:rgba(112, 114, 104, 0.198);
   --shadow-black: rgba(0, 0, 0, 0.407);
@@ -55,6 +55,13 @@ body, .root {
   position: relative;
 }
 
+#body-link-canvas {
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+}
+
 .root {
   margin: var(--edge-margin);
   opacity: 0;
@@ -65,6 +72,7 @@ body, .root {
 }
 
 main {
+  position: relative;
   max-width: 1000px;
   height: calc(100% - var(--aside-height));
 }
