--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -114,6 +114,16 @@ main {
   padding: 1em;
 
   border-radius: 5px;
+
+  opacity: 0;
+  transition: 0.5s opacity;
+
+  pointer-events: none;
+}
+
+.center-piece.visible {
+  opacity: 1;
+  pointer-events: inherit;
 }
 
 .composite {
@@ -185,7 +195,8 @@ main {
   font-family: var(--font-sans);
   text-align: right;
   align-self: flex-end;
-  font-size: 0.5em;
+  font-size: 0.4em;
+  padding-top: 0.25em;
 
   flex: 0;
 } 
